examples/misc/error/compilation/gen_alloc-index_root.bfr
let main = [
  $alloc {
    i: index;
  }
  > i
]